# CryptoWallet

./: Makefile  dump.rdb  pyproject.toml  test.py
config/: settings.py
config_celery/: celery.py  celery_app.py
config_fastapi/: app.py
config_socketio/: app.py  consumers.py  socketio_app.py
migrations/: env.py
migrations/versions/: 25ae3cc1c940_.py  26d9fc162642_.py  2e8333b2b1ee_.py  2f7417b23762_.py  31f50f142518_.py  524acaf82451_.py  5a89a2633b76_.py  5bc96e547b89_.py  5c4ed8cae521_.py  6adb5405068f_.py  90bdb84fa01d_.py  96372014a93a_.py  b677cb2abdbc_.py  bbab2a1f7076_.py  fc4ac5f97a30_.py
src/boto3/: boto3_service.py
src/chat/: containers.py  endpoints.py  models.py  repository.py  schemas.py  views.py
src/chat/services/: chat.py
src/delivery/: consumers.py  containers.py  endpoints.py  models.py  repository.py  schemas.py
src/delivery/services/: delivery.py
src/gateway/: containers.py  db.py  endpoints.py  models.py  register.py  repository.py  schemas.py  tasks.py  views.py
src/ibay/: containers.py  endpoints.py  models.py  repository.py  schemas.py  views.py
src/parser/: consumers.py  containers.py  models.py  repository.py  tasks.py
src/wallet/: consumers.py  containers.py  endpoints.py  models.py  repository.py  views.py
src/web3/: containers.py  repository.py  web3_service.py
static/css/: profile.css  profile.css.map  profile.sass  wallets.css  wallets.css.map  wallets.sass
templates/: chat.html  ibay.html  login.html  profile.html  register.html  wallets.html
utils/: auth_operations.py
utils/security/: base.py
(+7 files in other folders)
